# Bisque-Cell-Type-Deconvolution-of-Bulk-RNA-Seq

./: .gitignore  Dockerfile  Pkg_Guide.md  README.md  pyproject.toml
data/output/Bisque-Preprocessing/: bulk_counts_overlap.tsv  bulk_counts_unmapped.tsv  bulk_mapping_counts.json  mapping_summary.json  markers.tsv  qc_summary.json  ref_memmap.npy  reference_by_celltype.tsv  sc_metadata.tsv
data/output/Bisque_deconvolution_results/: Bisque_proportions.csv  R_sessionInfo.txt  bisque_bulk_proportions.tsv  bisque_genes_used.txt  bisque_python_summary.json  pseudobulk_donor_level.tsv  signature_matrix.tsv
data/output/Bisque_deconvolution_results/QC & Performance Metrics/: QC_summary.tsv  reconstruction_fit.tsv  residual_norms.tsv  top_markers_per_celltype.tsv
data/output/Bisque_deconvolution_results/deconv_visual_reports/: top_genes_per_sample.tsv
data/output/Enhanced-Deconv-Reports/data/: proportions.csv  proportions.tsv  statistical_comparison.csv  statistical_comparison.tsv
data/output/Enhanced-Deconv-Reports/reports/: analysis_metadata.json  analysis_report.txt  analysis_summary.json
src/bisque_deconv/: __init__.py  adata_utils.py  cli.py  config.py  drivers.py  utils.py
src/bisque_deconv/s1/: __init__.py  export.py  io.py  mapping.py  markers.py  qc.py  run.py  tissue.py
src/bisque_deconv/s2/: __init__.py  deconv.py  r_code.R  tested-code-r.py
src/bisque_deconv/s3/: analyzer.py  api.py  loader.py  run.py
tests/: test_cli_smoke.py  test_imports.py
